added content and associated images, cleaned up broken all image and link directories;

--- a/About_Me.html
+++ b/About_Me.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 	<div class="topnav">
-		<a href="index.html">Index</a>
+		<!--<a href="index.html">Index</a>-->
 		<a href="Home.html">Home</a>
 		<a class="active" href="About_Me.html">About Me</a>
 		<a href="Projects.html">Projects</a>
@@ -63,33 +63,61 @@
 	
 	<h1 class="Class1">About Steve Brunelli</h1>
 		 <p class="underlineClass">Couple things about myself</p>
-
-		 	<ol>
-				<li> My name is Steve Brunelli</li>
-				<li> I am learning how to code</li>
-				<li> This is a pilot project</li>
-				<li> I really have no idea what I'm doing just yet!</li>
-			</ol>
-
-	<h3>
+		 <div class="container2">
+		 	<div class="col-md-3">
+		 		 My name is Steve Brunelli
+			</div>
+			<div class="col-md-3">	
+				 I attending devCodeCamp and learning how to code
+			</div>
+			<div class="col-md-3">
+				 I love the city of Milwaukee
+			</div>
+			<div class="col-md-3">
+				Driven by Growth and Passion
+			</div>
+		</div>
+	<div>
+		<center><div class="container1">
+			<div class="row">
+				<div class="col-md-3">
+					I am a Milwaukee Native
+						<img src="Images/Downtown_Milwaukee.jpg" alt="DT_Mil" style="width: 250px; height: 250px;">
+				</div>
+				<div class="col-md-3">
+					I am a fan of the Milwaukee Bucks
+						<img src="Images/BucksLogo.jpg" alt="Bucks Logo" style="width: 250px; height: 250px;">
+				</div>
+				<div class="col-md-3">
+					I am a volleyball coach for Milwaukee Sting
+						<img src="Images/StingLogo.jpg" alt="Sting Logo" style="width: 250px; height: 250px;">
+				</div>	
+				<div class="col-md-3">
+					M.S. from UW-Oshkosh COB
+						<img src="Images/MS_SustMGMT.png" alt="Sutainable Management Logo" style="width: 250px; height: 250px;">
+				</div>
+			</div>
+		</div>	
+	</div>
+	<!--<h3>
 		<p>
 			<center>This is a list describing who I am</center>
 		<ul>
 			<li>I am a Milwaukee Native</li>
-				<img src="images\Downtown_Milwaukee.jpg" alt="DT_Mil" style="width: 250px; height: 250px;">
+				<img src="Images/Downtown_Milwaukee.jpg" alt="DT_Mil" style="width: 250px; height: 250px;">
 			<li>I am a fan of the Milwaukee Bucks</li>
-				<img src="images\BucksLogo.jpg" alt="Bucks Logo" style="width: 250px; height: 250px;">
+				<img src="Images/BucksLogo.jpg" alt="Bucks Logo" style="width: 250px; height: 250px;">
 			<li>I am a volleyball coach for Milwaukee Sting</li>
-				<img src="images\StingLogo.jpg" alt="Sting Logo" style="width: 250px; height: 250px;">
+				<img src="Images/StingLogo.jpg" alt="Sting Logo" style="width: 250px; height: 250px;">
 			<li>I have my masters in Sustainable Management from UW-Oshkosh</li>
-				<img src="images\MS_SustMGMT.png" alt="Ssutainable Management Logo" style="width: 250px; height: 250px;">
+				<img src="Images/MS_SustMGMT.png" alt="Sutainable Management Logo" style="width: 250px; height: 250px;">
 
 		</ul>	
 
 		</p>
 		
 
-	</h3>
+	</h3>-->
 
 <br>
 <br>
