--- a/Contact.html
+++ b/Contact.html
@@ -38,11 +38,11 @@
 </head>
 <body>
 	<div class="topnav">
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/index.html">Index</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Home.html">Home</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/About_Me.html">About Me</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Projects.html">Projects</a>
-		<a class="active" href="file:///C:/Users/brune/Desktop/DCC/Week_01/Contact.html">Contact</a>
+		<!--<a href="index.html">Index</a>-->
+		<a href="Home.html">Home</a>
+		<a href="About_Me.html">About Me</a>
+		<a href="Projects.html">Projects</a>
+		<a class="active" href="Contact.html">Contact</a>
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
 		<script type="text/javascript">
@@ -60,19 +60,26 @@
   				document.documentElement.scrollTop = 0;
 			}
 		</script>
-	<h1 id="bold-ID"><center>This is my Contact Information!</center></h1>
-	<p class="contactP1">Steve Brunelli M.S.</p>
-	<p>brunes46@gmail.com</p>
-	<p>Mobile: 4148285575</p>
-	<p> <a href="https://www.linkedin.com/in/stevebrunelli/">LinkedIn</a></p>
-	<br>
+
 	<h4 class="ContactClass1">Contact me!</h4>
-	<center><img src="images\GitHub.png" alt="Javascript_Logo" style="width: 125px; height: 125px;" class="githubemblem">
-		<br>
-						<a style="background-color: white;" href="https://github.com/Sbrunelli433">GitHub Account</a>
+	<center>
+						<br><br>
+						<a href="https://github.com/Sbrunelli433">
+							<img src="Images/GitHub.png">
+						</a>
+						<a href="https://www.linkedin.com/in/stevebrunelli/">
+							<img src="Images/LinkedIn.png">
+						</a>
+						<a href="https://twitter.com/SteveBrunelli?lang=en">
+							<img src="Images/Twitter.png">
+						</a>
+						<a href="mailto:brunes46@gmail.com">
+							<img src="Images/Gmail.png">
+						</a>
+	<h4 class="ContactClass1"></h4>
 	</center>
 	
-		<form class="ContactClass1">
+		<!--<form class="ContactClass1">
 		First Name:	<input align="middle" type="text" label="First name" value="First Name" size="35" maxlength="30" required><br>
 		Last Name:	<input align="middle" type="text" label="Last name" value="Last Name" size="35" maxlength="50" required><br>
 		Email:		<input align="middle" type="email" label="email" value="example@email.com" size="35" maxlength="50" required><br>
@@ -80,7 +87,7 @@
 					<br>
 					<input type="button" value="Submit">
 					<input type="reset" value="Reset">
-		</form>
+		</form>-->
 	
 	<br>
 <br>
