--- a/Home.html
+++ b/Home.html
@@ -33,16 +33,16 @@
 		#myBtn:hover {
 			background-color: #555;
 			}
-			
+
 	</style>
 </head>
 <body style="background-image: url('Images/Milwaukee_Day.jpg')">
 	<div class="topnav">
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/index.html">Index</a>
-		<a class="active" href="file:///C:/Users/brune/Desktop/DCC/Week_01/Home.html">Home</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/About_Me.html">About Me</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Projects.html">Projects</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Contact.html">Contact</a>
+		<!--<a href="index.html">Index</a>-->
+		<a class="active" href="Home.html">Home</a>
+		<a href="About_Me.html">About Me</a>
+		<a href="Projects.html">Projects</a>
+		<a href="Contact.html">Contact</a>
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
 		<script type="text/javascript">
@@ -61,29 +61,43 @@
 			}
 		</script>
 	<h1 id="bold-ID"><center>This is my homepage!</center></h1>
+	<span class="Class1">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12" style="text-align: center;">
+					<center>
+						<h1>Hello World!</h1>
+						<p>This is my first Portfolio Homepage. Welcome to my <i>site!</i></p>
+						<p>My name is <strong>Steve Brunelli M.S.</strong></p>
+						<img src="Images\Steve_Brunelli_large.jpg" alt="Steve Brunelli Headshot" class="Headshot" style="width: 250px; height: 250px;">
+					</center>
+				</div>
+			</div>	
+		</div>
+	</span>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
-				<h1>Hello World!</h1>
-				<h1>Hello World!</h1>
-				<h1>Hello World!</h1>
+			<div class="col-md-6" style="text-align: center;">
+				<h1>This is some content</h1>
+				<h1>Additional Content</h1>
+				<h1>Third row of content in the first column</h1>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6" style="text-align: center;">
 				<h1>Hello Bootstrap!</h1>
-				<h1>Hello Bootstrap!</h1>
-				<h1>Hello Bootstrap!</h1>
+				<h1>I am using Bootstrap 4?!</h1>
+				<h1>This also functions as content</h1>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3">
-				<h5>Hello World!</h5>
+				<h5>medium size, 3 columns</h5>
 			</div>
 			<div class="col-md-6">
-				<h5><center>Hello Bootstrap!</center></h5>
+				<h5><center>medium size, 6 columns</center></h5>
 
 			</div>
 			<div class="col-md-3">
-				<h5>Hello World!</h5>
+				<h5 style="text-align: right;">medium size, 3 columns</h5>
 			</div>
 		</div>
 	</div>
