--- a/Projects.html
+++ b/Projects.html
@@ -37,13 +37,13 @@
 	</style>
 </head>
 <body>
-	<h1 id="bold-ID"><center>This is my Projects Page!</center></h1>
+
 	<div class="topnav">
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/index.html">Index</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Home.html">Home</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/About_Me.html">About Me</a>
-		<a class="active" href="file:///C:/Users/brune/Desktop/DCC/Week_01/Projects.html">Projects</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Contact.html">Contact</a>
+		<!--<a href="index.html">Index</a>-->
+		<a href="Home.html">Home</a>
+		<a href="About_Me.html">About Me</a>
+		<a class="active" href="Projects.html">Projects</a>
+		<a href="Contact.html">Contact</a>
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
 		<script type="text/javascript">
@@ -61,26 +61,49 @@
   				document.documentElement.scrollTop = 0;
 			}
 		</script>
-		<p><center style="background-color: white; font-size: 24px;">I am learning how to code in the following languages</center></p>
+	<h1 id="bold-ID"><center>This is my Projects Page!</center></h1>
+	<p><center style="background-color: white; font-size: 24px;">I am learning how to utilize the following tools</center></p>
 <br>
 <br>
 		<center><div class="container">
 			<div class="row">
 				<div class="col-md-3">
-						<center><img src="images\HTML5_Logo.png" alt="HTML5 Logo" style="width: 125px; height: 125px;"></center>
+						<center><img src="Images/HTML5_Logo.png" alt="HTML5 Logo" style="width: 125px; height: 125px;"></center>
 				</div>
 				<div class="col-md-3">
-						<center><img src="images\CSS_Logo.png" alt="CSS Logo" style="width: 150px; height: 125px;"></center>
+						<center><img src="Images/CSS_Logo.png" alt="CSS Logo" style="width: 150px; height: 125px;"></center>
 				</div>
 				<div class="col-md-3">
-						<center><img src="images\Javascript_Logo.png" alt="Javascript_Logo" style="width: 125px; height: 125px;"></center>
+						<center><img src="Images/Javascript_Logo.png" alt="Javascript_Logo" style="width: 125px; height: 125px;"></center>
 				</div>	
 				<div class="col-md-3">
-						<center><img src="images\GitHub.png" alt="Javascript_Logo" style="width: 125px; height: 125px;"></center>
-						<a href="https://github.com/Sbrunelli433">GitHub Account</a>
-				</div>	
-		</div>	
+						<center><img src="Images/GitHub.png" alt="GitHub_Logo" style="width: 125px; height: 125px;"></center>
+						<!--<a href="https://github.com/Sbrunelli433">
+							<img src="Images/GitHub.png" alt="GitHub_Logo" style="width: 125px; height: 125px;">
+						</a>-->
+				</div>
+			</div>
 		</div>
+		</center>
+		<center><div class="container">
+			<div class="row"> 
+				<div class="col-md-3">
+					<center><img src="Images/C_Logo.png" alt="C# Logo" style="width: 125px; height: 125px;"></center>	
+				</div>
+				<div class="col-md-3">
+					<center><img src="Images/asp_net.jpg" alt="asp.net Logo" style="width: 125px; height: 125px;"></center>	
+				</div>
+				<div class="col-md-3">
+					<center><img src="Images/asp_net_core.png" alt="asp.net core Logo" style="width: 225px; height: 125px;"></center>	
+				</div>
+				<div class="col-md-3">
+					<center><img src="Images/SQL.png" alt="SQL Logo" style="width: 125px; height: 125px;"></center>	
+				</div>
+			</div>
+		</div>
+		</center>
+
+				
 		<br>
 <br>
 <br>
