--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -38,11 +38,11 @@
 </head>
 <body>
 	<div class="topnav">
-		<a class="active" href="file:///C:/Users/brune/Desktop/DCC/Week_01/index.html">Index</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Home.html">Home</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/About_Me.html">About Me</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Projects.html">Projects</a>
-		<a href="file:///C:/Users/brune/Desktop/DCC/Week_01/Contact.html">Contact</a>
+		<a class="active" href="index.html">Index</a>
+		<a href="Home.html">Home</a>
+		<a href="About_Me.html">About Me</a>
+		<a href="Projects.html">Projects</a>
+		<a href="Contact.html">Contact</a>
 	</div>
 	<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
 	<script type="text/javascript">
@@ -65,7 +65,7 @@
 			<h1>Hello World!</h1>
 			<p>This is my first Portfolio Homepage. Welcome to my <i>site!</i></p>
 				<p>My name is <strong>Steve Brunelli M.S.</strong></p>
-				<img src="images\Steve_Brunelli_large.jpg" alt="Steve Brunelli Headshot" class="Headshot" style="width: 250px; height: 250px;">
+				<img src="Images\Steve_Brunelli_large.jpg" alt="Steve Brunelli Headshot" class="Headshot" style="width: 250px; height: 250px;">
 		</center>
 	</span>
 	<h2><center>
@@ -96,4 +96,4 @@
 
 
 
-</html>
+</html>-->
