re-added my index because I deleted it earlier and everything broke

--- a/About_Me.html
+++ b/About_Me.html
@@ -38,6 +38,7 @@
 </head>
 <body>
 	<div class="topnav">
+		<a href="index.html">Index</a>
 		<a href="Home.html">Home</a>
 		<a class="active" href="About_Me.html">About Me</a>
 		<a href="Projects.html">Projects</a>
