--- a/Projects.html
+++ b/Projects.html
@@ -39,6 +39,7 @@
 <body>
 
 	<div class="topnav">
+		<a href="index.html">Index</a>
 		<a href="Home.html">Home</a>
 		<a href="About_Me.html">About Me</a>
 		<a class="active" href="Projects.html">Projects</a>
