updated nav header links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body style="background-image: url('Images/Milwaukee_Day.jpg')">
 	<div class="topnav">
-		<a class="active" href="index.html">Index</a>
+		<!-- <a class="active" href="index.html">Index</a> -->
 		<a href="Home.html">Home</a>
 		<a href="About_Me.html">About Me</a>
 		<a href="Projects.html">Projects</a>
@@ -60,48 +60,18 @@
   				document.documentElement.scrollTop = 0;
 			}
 		</script>
-	<h1 id="bold-ID"><center>This is my homepage!</center></h1>
 	<span class="Class1">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" style="text-align: center;">
 					<center>
-						<h1>Hello World!</h1>
-						<p>This is my first Portfolio Homepage. Welcome to my <i>site!</i></p>
-						<p>My name is <strong>Steve Brunelli M.S.</strong></p>
-						<img src="Images\Steve_Brunelli_large.jpg" alt="Steve Brunelli Headshot" class="Headshot" style="width: 250px; height: 250px;">
+						<h1>This is my website landing page!</h1>
+						<h1>Please continue to the Home Page</h1>
 					</center>
 				</div>
 			</div>	
 		</div>
 	</span>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6" style="text-align: center;">
-				<h1>This is some content</h1>
-				<h1>Additional Content</h1>
-				<h1>Third row of content in the first column</h1>
-			</div>
-			<div class="col-md-6" style="text-align: center;">
-				<h1>Hello Bootstrap!</h1>
-				<h1>I am using Bootstrap 4?!</h1>
-				<h1>This also functions as content</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-3">
-				<h5>medium size, 3 columns</h5>
-			</div>
-			<div class="col-md-6">
-				<h5><center>medium size, 6 columns</center></h5>
-
-			</div>
-			<div class="col-md-3">
-				<h5 style="text-align: right;">medium size, 3 columns</h5>
-			</div>
-		</div>
-	</div>
-	
 	<br>
 	<br>
 <br>
