--- a/About_Me.html
+++ b/About_Me.html
@@ -33,12 +33,20 @@
 		#myBtn:hover {
 			background-color: #555;
 		}
+		body{
+			background-image: url("Images/Morning.jpg");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-attachment: fixed;
+			background-size: 1400px 1500px;
+
+		}	
 
 	</style>
 </head>
-<body>
+<!--<body style="background-image: url('Images/Morning.jpg')">-->
 	<div class="topnav">
-		<a href="index.html">Index</a>
+		<!-- <a href="index.html">Index</a> -->
 		<a href="Home.html">Home</a>
 		<a class="active" href="About_Me.html">About Me</a>
 		<a href="Projects.html">Projects</a>
