--- a/About_Me.html
+++ b/About_Me.html
@@ -85,7 +85,7 @@
 				Driven by Growth and Passion
 			</div>
 		</div>
-	<!-- <div>
+	<div>
 		<center>
 			<div class="container1">
 				<div class="row">
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 		</center>	
-	</div> -->
+	</div>
 	<!--<h3>
 		<p>
 			<center>This is a list describing who I am</center>
