--- a/About_Me.html
+++ b/About_Me.html
@@ -86,26 +86,28 @@
 			</div>
 		</div>
 	<div>
-		<center><div class="container1">
-			<div class="row">
-				<div class="col-md-3">
-					I am a Milwaukee Native
-						<img src="Images/Downtown_Milwaukee.jpg" alt="DT_Mil" style="width: 250px; height: 250px;">
-				</div>
-				<div class="col-md-3">
-					I am a fan of the Milwaukee Bucks
-						<img src="Images/BucksLogo.jpg" alt="Bucks Logo" style="width: 250px; height: 250px;">
-				</div>
-				<div class="col-md-3">
-					I am a volleyball coach for Milwaukee Sting
-						<img src="Images/StingLogo.jpg" alt="Sting Logo" style="width: 250px; height: 250px;">
-				</div>	
-				<div class="col-md-3">
-					M.S. from UW-Oshkosh COB
-						<img src="Images/MS_SustMGMT.png" alt="Sutainable Management Logo" style="width: 250px; height: 250px;">
+		<center>
+			<div class="container1">
+				<div class="row">
+					<div class="col-md-3">
+						I am a Milwaukee Native
+							<img src="Images/Downtown_Milwaukee.jpg" alt="DT_Mil" style="width: 250px; height: 250px;">
+					</div>
+					<div class="col-md-3">
+						I am a fan of the Milwaukee Bucks
+							<img src="Images/BucksLogo.jpg" alt="Bucks Logo" style="width: 250px; height: 250px;">
+					</div>
+					<div class="col-md-3">
+						I am a volleyball coach for Milwaukee Sting
+							<img src="Images/StingLogo.jpg" alt="Sting Logo" style="width: 250px; height: 250px;">
+					</div>	
+					<div class="col-md-3">
+						M.S. from UW-Oshkosh COB
+							<img src="Images/MS_SustMGMT.png" alt="Sutainable Management Logo" style="width: 250px; height: 250px;">
+					</div>
 				</div>
 			</div>
-		</div>	
+		</center>
 	</div>
 	<!--<h3>
 		<p>
