updated links and added a few JS features

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!-- <a class="active" href="index.html">Index</a> -->
 		<a href="Home.html">Home</a>
 		<a href="About_Me.html">About Me</a>
-		<a href="Projects.html">Projects</a>
+		<a href="projects/index.html">Projects</a>
 		<a href="Contact.html">Contact</a>
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
