--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
 		<!-- <a href="index.html">Index</a> -->
 		<a class="active" href="Home.html">Home</a>
 		<a href="About_Me.html">About Me</a>
-		<a href="Projects.html">Projects</a>
+		<a href="/projects/index.html">Projects</a>
 		<a href="Contact.html">Contact</a>
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
