--- a/Projects.html
+++ b/Projects.html
@@ -44,6 +44,8 @@
 		<a href="About_Me.html">About Me</a>
 		<a class="active" href="Projects.html">Projects</a>
 		<a href="Contact.html">Contact</a>
+		<a href="/features/calculator/index.html">calculator</a>
+
 	</div>
 		<button onclick="topFunction()" id="myBtn" title="Go to Top">Top</button>
 		<script type="text/javascript">
@@ -103,34 +105,6 @@
 		</div>
 		</center>
 
-				
-		<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-	
+			
 </body>
 </html>
